--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -8,7 +8,12 @@ html, body {
 body {
   margin: 0;
   background-color: $bg-app;
-  user-select: text;
+  // user-select: text;
+  -moz-user-select: none;
+-webkit-user-select: none;
+-ms-user-select: none;
+-khtml-user-select: none;
+user-select: none;
 }
 
 p, h1, h2, h3, h4, h5, h6, p, ul, li, dl, dt, dd, th, td {
